feat: auto-fill username in initProject and add config settings (v0.1.1)
- initProject now auto-fills username from saved credentials
- Added kaggle.username and kaggle.isSignedIn to settings
- Settings page now shows login status and username
- Credentials are remembered across sessions

--- a/package.json
+++ b/package.json
@@ -469,6 +469,20 @@
           "type": "number",
           "default": 600,
           "description": "How long to poll for completion before giving up."
+        },
+        "kaggle.username": {
+          "type": [
+            "string",
+            "null"
+          ],
+          "default": null,
+          "markdownDescription": "Your Kaggle username. Set automatically when you sign in via `Kaggle: Sign In` command."
+        },
+        "kaggle.isSignedIn": {
+          "type": "boolean",
+          "default": false,
+          "description": "Whether you are signed in to Kaggle.",
+          "readOnly": true
         }
       }
     }
