feat: add Init Project button to Runs view title (v0.1.1)
- Added 📦 Init Project button at top of Runs view
- Users can now initialize projects directly from the sidebar
- Improved UX for users who prefer GUI over commands

--- a/package.json
+++ b/package.json
@@ -328,6 +328,11 @@
       ],
       "view/title": [
         {
+          "command": "kaggle.initProject",
+          "when": "view == kaggleRunsView",
+          "group": "navigation@1"
+        },
+        {
           "command": "kaggle.refreshMyNotebooks",
           "when": "view == kaggleMyNotebooksView",
           "group": "navigation@1"
