--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kaggle-runner",
   "displayName": "Kaggle Runner",
-  "description": "Develop locally, run on Kaggle compute. Push notebooks/scripts, toggle GPU/TPU, fetch outputs.",
+  "description": "Run Jupyter notebooks & Python scripts on Kaggle cloud directly from VSCode. Push code, configure GPU/TPU, fetch outputs with real-time status updates.",
   "version": "0.1.1",
   "publisher": "PengCui",
   "author": "Peng Cui",
