--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "Machine Learning",
     "Other"
   ],
-  "icon": "media/kaggle-icon-bright.png",
+  "icon": "media/logo.png",
   "activationEvents": [
     "*"
   ],
