--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,9 @@ jobs:
         run: npm test
 
       - name: Package extension
-        run: npx @vscode/vsce package
+        run: |
+          npx @vscode/vsce package
+          mv kaggle-runner-*.vsix kaggle-runner-latest.vsix
 
       - name: Publish to VS Code Marketplace
         if: github.event_name == 'release'
@@ -40,6 +42,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./kaggle-runner-${{ github.event.release.tag_name }}.vsix
+          asset_path: ./kaggle-runner-latest.vsix
           asset_name: kaggle-runner-${{ github.event.release.tag_name }}.vsix
           asset_content_type: application/zip
