--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    environment: VSCE_TOKEN
     steps:
       - name: Checkout
         uses: actions/checkout@v4
