--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     environment: VSCE_TOKEN
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
